Fixed header-content overlap issue

--- a/css/giving-styles.css
+++ b/css/giving-styles.css
@@ -92,9 +92,15 @@ a.resendmail{
 
 @media (min-width: 1200px) {
 }
+
+@media (max-width: 979px){
+    html, body {height:100%;padding-top: 0px;}
+}
+
 @media (min-width: 768px)  {
     #signupModal .float-reset { border-left:1px solid #e3e3e3; padding-left: 20px; margin-left: 0; }
 }
 @media (max-width: 767px) {
     .social-media-signup a { text-align: center;  }
 }
+
